--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arkhamjs-storage-browser",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Browser storage for ArkhamJS",
   "license": "MIT",
   "main": "index.js",
@@ -15,11 +15,11 @@
   "author": "Giraldo Rosales <giraldo@nitrogenlabs.com> (http://nitrogenlabs.com/)",
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/nitrogenlabs/arkhamjs.git"
+    "url": "git+ssh://git@github.com/nitrogenlabs/arkhamjs-storage-browser.git"
   },
   "homepage": "http://www.arkhamjs.com",
   "bugs": {
-    "url": "https://github.com/nitrogenlabs/arkhamjs/issues"
+    "url": "https://github.com/nitrogenlabs/arkhamjs-storage-browser/issues"
   },
   "scripts": {
     "compile": "tsc",
@@ -34,6 +34,7 @@
     "@types/jest": "^21.1.9",
     "@types/node": "^8.5.2",
     "jest": "^22.0.4",
+    "jest-localstorage-mock": "^2.1.0",
     "ts-jest": "^22.0.0",
     "tslint": "^5.8.0",
     "tslint-eslint-rules": "^4.1.1",
@@ -47,7 +48,8 @@
       "js"
     ],
     "setupFiles": [
-      "<rootDir>/jest.setup.js"
+      "<rootDir>/jest.setup.js",
+      "jest-localstorage-mock"
     ],
     "testURL": "http://localhost",
     "transform": {
@@ -64,5 +66,6 @@
   },
   "directories": {
     "doc": "docs"
-  }
+  },
+  "dependencies": {}
 }
