Updated readme with new module path

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "arkhamjs-storage-browser",
-  "version": "1.0.3",
+  "name": "@nlabs/arkhamjs-storage-browser",
+  "version": "1.0.4",
   "description": "Browser storage for ArkhamJS",
   "license": "MIT",
   "main": "index.js",
