--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nlabs/arkhamjs-storage-browser",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Browser storage for ArkhamJS",
   "license": "MIT",
   "main": "index.js",
@@ -18,7 +18,7 @@
     "type": "git",
     "url": "git+ssh://git@github.com/nitrogenlabs/arkhamjs-storage-browser.git"
   },
-  "homepage": "http://www.arkhamjs.com",
+  "homepage": "http://www.arkhamjs.io",
   "bugs": {
     "url": "https://github.com/nitrogenlabs/arkhamjs-storage-browser/issues"
   },
