--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "@nlabs/arkhamjs-storage-browser",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Browser storage for ArkhamJS",
   "license": "MIT",
   "main": "index.js",
   "types": "./lib/index.d.ts",
-  "typings": "lib/index",
   "keywords": [
     "arkhamjs",
     "flux",
@@ -13,59 +12,34 @@
     "nitrogenlabs",
     "storage"
   ],
-  "author": "Giraldo Rosales <giraldo@nitrogenlabs.com> (http://nitrogenlabs.com/)",
+  "author": {
+    "name": "Giraldo Rosales",
+    "email": "giraldo@nitrogenlabs.com",
+    "url": "http://nitrogenlabs.com"
+  },
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/nitrogenlabs/arkhamjs-storage-browser.git"
   },
-  "homepage": "http://www.arkhamjs.io",
+  "homepage": "https://arkhamjs.io",
   "bugs": {
     "url": "https://github.com/nitrogenlabs/arkhamjs-storage-browser/issues"
   },
   "scripts": {
-    "compile": "tsc",
-    "docs": "typedoc --target ES5 --module commonjs --out docs/ src/ --exclude src/index.ts --excludeExternals --hideGenerator",
-    "lint": "tslint -c tslint.json 'src/**/*.{ts,tsx}'",
-    "prepublishOnly": "NODE_ENV=production npm test && npm run compile",
-    "pretest": "npm run lint",
-    "test": "jest"
+    "build": "lex compile",
+    "lint": "eslint ./src --ext .ts,.tsx",
+    "prepublishOnly": "yarn test && yarn build",
+    "pretest": "yarn lint",
+    "reset": "lex clean && yarn",
+    "test": "lex test",
+    "update": "yarn upgrade-interactive --latest"
   },
   "devDependencies": {
-    "@types/jest": "^21.1.10",
-    "@types/node": "^8.5.2",
-    "jest": "^22.0.4",
-    "jest-localstorage-mock": "^2.1.0",
-    "ts-jest": "^22.0.0",
-    "tslint": "^5.8.0",
-    "tslint-eslint-rules": "^4.1.1",
-    "typedoc": "^0.9.0",
-    "typescript": "^2.6.2"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js"
-    ],
-    "setupFiles": [
-      "<rootDir>/jest.setup.js",
-      "jest-localstorage-mock"
-    ],
-    "testURL": "http://localhost",
-    "transform": {
-      "^.+\\.(ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
-    },
-    "testMatch": [
-      "<rootDir>/src/**/*test.ts?(x)"
-    ],
-    "testPathIgnorePatterns": [
-      "<rootDir>/node_modules/",
-      "<rootDir>/dist/"
-    ],
-    "verbose": false
-  },
-  "directories": {
-    "doc": "docs"
-  },
-  "dependencies": {}
+    "@types/jest": "^23.1.1",
+    "@types/node": "^10.3.4",
+    "eslint": "^4.19.1",
+    "eslint-config-styleguidejs": "^0.7.5",
+    "jest-localstorage-mock": "^2.2.0",
+    "typescript": "^2.9.2"
+  }
 }
